labs/capstone-9-bh-um-modernization/reference-umlite/infra/k8s/um-case-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: um-case-svc
  labels: { app: um-case-svc }
spec:
  replicas: 2
  selector:
    matchLabels: { app: um-case-svc }
  template:
    metadata:
      labels: { app: um-case-svc }
    spec:
      containers:
        - name: um-case-svc
          image: umliteacr.azurecr.io/um-case-svc:latest   # pushed by CI (M35)
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            initialDelaySeconds: 20
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            initialDelaySeconds: 30
          resources:
            requests: { cpu: "250m", memory: "512Mi" }
            limits: { cpu: "1", memory: "1Gi" }
---
apiVersion: v1
kind: Service
metadata:
  name: um-case-svc
spec:
  selector: { app: um-case-svc }
  ports:
    - port: 8081
      targetPort: 8081
